--- a/skills.html
+++ b/skills.html
@@ -31,7 +31,7 @@
           <ul class="content-list">
             <li class="content-list__item">
               <h2 class="title-2">Frontend </h2>
-              <p>JavaScript, TypeScript, ReactJS, Git, GitLab, HTML, CSS, NPM, BootStrap</p>
+              <p>JavaScript, ReactJS, Git, GitLab, HTML, CSS, SCSS, BootStrap</p>
             </li>
             <li class="content-list__item">
               <h2 class="title-2">Backend</h2>
@@ -51,7 +51,7 @@
             <li class="social__item"><a target="_blank" href="https://www.linkedin.com/in/maxim-solovyov/"><img src="./img/icons/Vector-3.svg" alt="Linkedin"></a></li>
           </ul>
           <div class="copyright">
-            <p>© 2022 <a target="_blank" href="https://www.w3schools.com/">w3schools.com</a></p>
+            <p>© 2024 <a target="_blank" href="https://www.w3schools.com/">w3schools.com</a></p>
           </div>
         </div>
       </div>
